--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "test": "jestBROKEN --ci --coverage",
+    "test": "jest --ci --coverage",
     "build": "node -e \"console.log('Build step OK')\""
   },
   "dependencies": {
